syntax = "proto3";
option go_package = "./pb";

import "ws.proto";

package pbChat;



message MsgDataToMQ{
  string token = 1;
  string operationID = 2;
  server_api_params.MsgData msgData = 3;
}


message MsgDataToDB {
  server_api_params.MsgData msgData = 1;
  string operationID = 2;

}
message PushMsgDataToMQ{
  string OperationID = 1;
  server_api_params.MsgData msgData = 2;
  string pushToUserID = 3;
}

//message PullMessageReq {
//  string UserID = 1;
//  int64 SeqBegin = 2;
//  int64 SeqEnd = 3;
//  string OperationID = 4;
//}
//
//message PullMessageResp {
//  int32 ErrCode = 1;
//  string ErrMsg = 2;
//  int64 MaxSeq = 3;
//  int64 MinSeq = 4;
//  repeated GatherFormat SingleUserMsg = 5;
//  repeated GatherFormat GroupUserMsg = 6;
//}
//message PullMessageBySeqListReq{
//  string UserID = 1;
//  string OperationID = 2;
//  repeated int64 seqList =3;
//}
message GetMaxAndMinSeqReq {
  string UserID = 1;
  string OperationID = 2;
}
message GetMaxAndMinSeqResp {
  int32 ErrCode = 1;
  string ErrMsg = 2;
  uint32 MaxSeq = 3;
  uint32 MinSeq = 4;
}

message SendMsgReq {

  string token = 1;
  string operationID = 2;
  server_api_params.MsgData msgData = 3;

}

message SendMsgResp {
  int32 errCode = 1;
  string errMsg = 2;
  string serverMsgID = 4;
  string clientMsgID = 5;
  int64  sendTime = 6;

}

message WrapPullMessageBySeqListReq {
  server_api_params.PullMessageBySeqListReq PullMessageBySeqListReq = 1;
}
message WrapPullMessageBySeqListResp {
  server_api_params.PullMessageBySeqListResp PullMessageBySeqListResp = 1;
}
message WrapDelMsgListReq {
  server_api_params.DelMsgListReq DelMsgListReq = 1;
}
message WrapDelMsgListResp {
  server_api_params.DelMsgListResp DelMsgListResp = 1;
}
service Chat {
  rpc GetMaxAndMinSeq(GetMaxAndMinSeqReq) returns(GetMaxAndMinSeqResp);
  rpc PullMessageBySeqList(WrapPullMessageBySeqListReq) returns(WrapPullMessageBySeqListResp);
  rpc SendMsg(SendMsgReq) returns(SendMsgResp);
  rpc DelMsgList(WrapDelMsgListReq) returns(WrapDelMsgListResp);
}
